Fix z-index values

--- a/pexels/src/components/Container/Photos/Photo/Modal/Modal.module.scss
+++ b/pexels/src/components/Container/Photos/Photo/Modal/Modal.module.scss
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   position: fixed;
-  z-index: 2;
+  z-index: 5;
   display: flex;
   justify-content: center;
   align-items: center;
