--- a/pexels/src/components/Header/NavBar/NavBar.module.scss
+++ b/pexels/src/components/Header/NavBar/NavBar.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
   display: flex;
   align-items: center;
-  z-index: 1;
+  z-index: 3;
 
   &__logoWrapper {
     width: 120px;
